--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,11 +1,17 @@
 <!--The content below is only a placeholder and can be replaced.-->
 <div style="text-align:center">
+  <div class="jumbotron">
   <h1>
-    Welcome to {{ title }}!
+    Welcome to {{ title }}
   </h1>
-  <h3> You can always Express yourself freely......</h3>
-  <ol>
-    <li *ngFor='let quote of quotes'>{{quote.title}}<br>{{quote.body}}</li>
-  </ol>
-  
-<router-outlet></router-outlet>
+  <h4>Always feel free to express yourself.....</h4>
+  </div>
+
+  <body> 
+      <app-quote></app-quote>
+  </body>
+ 
+   
+ 
+
+
